# Titan

./: .gitmodules  CMakeLists.txt  README.md
include/: camera.hpp  cinematic_camera.hpp  example_app.hpp  input.hpp  math.hpp
include/generators/: config.hpp  grid_mesh.hpp  heightmap_terrain.hpp  noise.hpp
include/renderer/: swap_buffer.hpp  terrain_renderer.hpp  util.hpp
src/: CMakeLists.txt  camera.cpp  cinematic_camera.cpp  example_app.cpp  input.cpp  main.cpp  math.cpp
src/generators/: grid_mesh.cpp  heightmap_terrain.cpp  noise.cpp
src/renderer/: swap_buffer.cpp  terrain_renderer.cpp  util.cpp
